// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="overview-quality-gate"
  id="overview-quality-gate"
>
  <h2
    className="overview-title"
  >
    overview.quality_gate
    <i
      className="spinner spacer-left"
    />
    <DocTooltip
      className="spacer-left"
      doc={Promise {}}
    />
  </h2>
</div>
`;

exports[`renders 2`] = `
<div
  className="overview-quality-gate"
  id="overview-quality-gate"
>
  <h2
    className="overview-title"
  >
    overview.quality_gate
    <DocTooltip
      className="spacer-left"
      doc={Promise {}}
    />
    <Level
      className="big-spacer-left"
      level="ERROR"
    />
  </h2>
  <div
    className="overview-quality-gate-conditions-list clearfix"
    id="overview-quality-gate-conditions-list"
  >
    <ApplicationQualityGateProject
      key="project1"
      metrics={Object {}}
      project={
        Object {
          "conditions": Array [],
          "key": "project1",
          "name": "project1",
          "status": "ERROR",
        }
      }
    />
    <ApplicationQualityGateProject
      key="project3"
      metrics={Object {}}
      project={
        Object {
          "conditions": Array [],
          "key": "project3",
          "name": "project3",
          "status": "WARN",
        }
      }
    />
  </div>
</div>
`;
